# modern-cpp-cuda-path-tracer-with-rust-harness

./: .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: aabb.hpp.3BCF43895DA59AA5.idx  bvh.hpp.B682CA3C3FBE43F4.idx  camera.hpp.A2993A00A82A7B6F.idx  color.hpp.89802D9C65EE474F.idx  constants.hpp.798CF58868C5ACF0.idx  dielectric.hpp.74BFE27F933099F7.idx  hit_record.hpp.1C760E40BDE7624D.idx  hittable.hpp.C1B7889E416D84CE.idx  hittable_list.hpp.3D411BD03AFDBE64.idx  interval.hpp.46B79C8BBAAFCA54.idx  lambertian.hpp.BE767D45783E3A5C.idx  main.cpp.3404E832797E85E3.idx  material.hpp.36D6D61ABDD02BEA.idx  metal.hpp.2FC8EAF29DE7C1C2.idx  random.hpp.E2E107CE1A8D68FD.idx  ray.hpp.3EFC252E219A5F20.idx  sphere.hpp.76A664AA017BDF46.idx  vec3.hpp.3A17BB8249B65FBF.idx
include/: aabb.hpp  box.hpp  bvh.hpp  camera.hpp  checker_texture.hpp  color.hpp  constant_medium.hpp  constants.hpp  cosine_pdf.hpp  dielectric.hpp  diffuse_light.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  hittable_pdf.hpp  image_loader.hpp  image_texture.hpp  interval.hpp  isotropic.hpp  lambertian.hpp  material.hpp  metal.hpp  mixture_pdf.hpp  noise_texture.hpp  onb.hpp  overloaded.hpp  pdf.hpp  pdf_variant.hpp  perlin.hpp  quad.hpp  random.hpp  ray.hpp  rotate_y.hpp  solid_color.hpp  sphere.hpp  sphere_pdf.hpp  texture.hpp  translate.hpp  vec3.hpp
src/: main.cpp
